--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,11 @@
   <groupId>dad</groupId>
   <artifactId>MultiArcade</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+ <properties>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 <dependencies>
 		<dependency>
