--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<exec.mainClass>dad.multiarcade.tetris.gui.Main</exec.mainClass>
+	<exec.mainClass>dad.multiarcade.mainapp.Main</exec.mainClass>
 	</properties>
 
 <dependencies>
