--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>dad</groupId>
-  <artifactId>MultiArcade</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
- <properties>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>dad</groupId>
+	<artifactId>MultiArcade</artifactId>
+	<version>0.9.0</version>
+	<properties>
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<exec.mainClass>dad.multiarcade.mainapp.Main</exec.mainClass>
+		<exec.mainClass>dad.multiarcade.mainapp.Main</exec.mainClass>
 	</properties>
 
-<dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
@@ -21,5 +21,41 @@
 			<artifactId>javafx-fxml</artifactId>
 			<version>11.0.1</version>
 		</dependency>
+	<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.11.0</version>
+		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>io.github.fvarrui</groupId>
+				<artifactId>javapackager</artifactId>
+				<version>1.6.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>package</goal>
+						</goals>
+						<configuration>
+							<mainClass>dad.multiarcade.mainapp.Main</mainClass>
+							<bundleJre>true</bundleJre>
+							<customizedJre>false</customizedJre>
+							<generateInstaller>true</generateInstaller>
+							<administratorRequired>false</administratorRequired>
+							<platform>windows</platform>
+							<winConfig>
+								<generateMsi>false</generateMsi>
+								<createDesktopIconTask>false</createDesktopIconTask>
+								<disableDirPage>false</disableDirPage>
+								<disableFinishedPage>false</disableFinishedPage>
+							</winConfig>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
